05.network/2.ingress-and-services/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-nginx
spec:
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: my-service
                port:
                  number: 80
